--- a/tracking.ipynb
+++ b/tracking.ipynb
@@ -282,8 +282,6 @@
        "      <th>Date</th>\n",
        "      <th>Confirmed</th>\n",
        "      <th>Deaths</th>\n",
-       "      <th>Recovered</th>\n",
-       "      <th>Active</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -293,8 +291,6 @@
        "      <td>2020-01-22</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -302,8 +298,6 @@
        "      <td>2020-01-23</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -311,8 +305,6 @@
        "      <td>2020-01-24</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -320,8 +312,6 @@
        "      <td>2020-01-25</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -329,20 +319,18 @@
        "      <td>2020-01-26</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       Country       Date  Confirmed  Deaths  Recovered  Active\n",
-       "0  Afghanistan 2020-01-22          0       0        NaN     NaN\n",
-       "1  Afghanistan 2020-01-23          0       0        NaN     NaN\n",
-       "2  Afghanistan 2020-01-24          0       0        NaN     NaN\n",
-       "3  Afghanistan 2020-01-25          0       0        NaN     NaN\n",
-       "4  Afghanistan 2020-01-26          0       0        NaN     NaN"
+       "       Country       Date  Confirmed  Deaths\n",
+       "0  Afghanistan 2020-01-22          0       0\n",
+       "1  Afghanistan 2020-01-23          0       0\n",
+       "2  Afghanistan 2020-01-24          0       0\n",
+       "3  Afghanistan 2020-01-25          0       0\n",
+       "4  Afghanistan 2020-01-26          0       0"
       ]
      },
      "execution_count": 4,
@@ -358,7 +346,9 @@
     "    \"Last_Update\": \"Date\",\n",
     "}).drop(columns=[\n",
     "    \"Delta_Confirmed\",\n",
-    "    \"Delta_Recovered\"\n",
+    "    \"Delta_Recovered\",\n",
+    "    \"Recovered\",\n",
+    "    \"Active\"\n",
     "]).replace({\n",
     "    \"United Kingdom\": \"UK\",\n",
     "    \"Korea, South\": \"South Korea\"\n",
@@ -366,6 +356,125 @@
     "\n",
     "case_df.Date = pd.to_datetime(case_df.Date)\n",
     "case_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Confirmed</th>\n",
+       "      <th>Deaths</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Australia</td>\n",
+       "      <td>2020-03-24</td>\n",
+       "      <td>2044</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Austria</td>\n",
+       "      <td>2020-03-24</td>\n",
+       "      <td>4477</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Canada</td>\n",
+       "      <td>2020-03-24</td>\n",
+       "      <td>2088</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>China</td>\n",
+       "      <td>2020-03-24</td>\n",
+       "      <td>81553</td>\n",
+       "      <td>3281</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Denmark</td>\n",
+       "      <td>2020-03-24</td>\n",
+       "      <td>1582</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Country       Date  Confirmed  Deaths\n",
+       "0  Australia 2020-03-24       2044       8\n",
+       "1    Austria 2020-03-24       4477      21\n",
+       "2     Canada 2020-03-24       2088      25\n",
+       "3      China 2020-03-24      81553    3281\n",
+       "4    Denmark 2020-03-24       1582      24"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "case_now_df = pd.read_csv(\n",
+    "    \"data/csse-github/data/cases_country.csv\"\n",
+    ").rename(columns={\n",
+    "    \"Country_Region\": \"Country\",\n",
+    "    \"Last_Update\": \"Date\",\n",
+    "}).drop(columns=[\n",
+    "    \"Lat\",\n",
+    "    \"Long_\",\n",
+    "    \"Recovered\",\n",
+    "    \"Active\"\n",
+    "]).replace({\n",
+    "    \"United Kingdom\": \"UK\",\n",
+    "    \"Korea, South\": \"South Korea\"\n",
+    "})\n",
+    "\n",
+    "case_now_df.Date = pd.to_datetime(case_now_df.Date).dt.floor('d')\n",
+    "case_now_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for _ in range(1):\n",
+    "    break\n",
+    "    if case_now_df.Date.min() > case_df.Date.max():\n",
+    "        print(\"Merging in new data\")\n",
+    "        case_df = case_df.append(case_now_df)"
    ]
   },
   {
@@ -377,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
